ws_controller/log/build_2025-08-25_22-04-22/flight_controller_pkg/stderr.log
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 966
    elif != 0:
         ^^
SyntaxError: invalid syntax

